# praxis

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  editable_install.sh  pixi.toml  pyproject.toml  pyrightconfig.json  setup.py
.github/workflows/: build-run-kernel-snake.yml  check-submodules.yml  ci-pyright.yml  ci.yml  code-formatting.yml  lit-tests.yaml
kernels/streamer_matmul/: Snakefile  aggregate.py  cfg2.hjson  gemm_l1_hw.yaml  gemm_l1_map.yaml  generate_mapping.py  quantized_matmul.py
naxirzag/backend/: zigzag.py
naxirzag/tools/: naxirzag_main.py
naxirzag/transforms/: __init__.py  linalg_to_stream.py
praxis/: praxis-opt
praxis/backend/: zigzag.py
praxis/tools/: praxis_main.py
praxis/transforms/: __init__.py  apply_zigzag_schedule.py
tests/: quantized_matmul.mlir
tests/filecheck/: lit.cfg
tests/filecheck/transforms/: apply-zigzag-schedule.mlir  linalg-to-stream.mlir
