[project]
name = "praxis"
description = "praxis"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT License" }
version = "0.0.1"

[project.scripts]
praxis-opt = "praxis.tools.praxis_main:main"

[tool.pixi.project]
authors = ["Josse Van Delm <josse.vandelm@gmail.com>"]
channels = ["conda-forge", "kuleuven-micas", "bioconda"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
praxis = { path = "./", editable = true }
snax-mlir = { path = "./snax-mlir", editable = true }
zigzag-dse = { path = "./zigzag", editable = true }
filecheck = ">=1.0.1,<2"

[tool.pixi.dependencies]
snax-cluster-prebuilt = "==0.2.8"
snax-cluster-dev = "==0.2.8"
python = "3.12.*"
mlir = { version = "==19.1.1.c.d401987fe349a87c53fe25829215b80b70c0c1a", channel = "kuleuven-micas" }
clang = ">=19.1.1, <20"
lld = ">=19.1.1, <20"
snakemake-minimal="*"
pyright = ">=1.1.390,<2"
vcd-to-csv = { version = ">=0.1.0,<0.2", channel = "kuleuven-micas" }
pre-commit = ">=4.1.0,<5"
lit = ">=19.1.7,<20"
plotly = ">=6.0.0,<7"
pygments = ">=2.19.1,<3"
pytables = ">=3.10.2,<4"

[tool.pixi.activation.env]
VLT_ROOT = "${CONDA_PREFIX}/share/verilator"

